[gd_scene load_steps=12 format=3 uid="uid://cj2mma84twgfb"]

[ext_resource type="Script" path="res://animations/networking.gd" id="1_2juek"]
[ext_resource type="FontFile" uid="uid://ckxk3elimfey3" path="res://resources/fonts/Kaph-Regular.otf" id="1_8dylx"]
[ext_resource type="Texture2D" uid="uid://b27iycarrg5t2" path="res://board/sprites/board1.png" id="2_k8kll"]
[ext_resource type="Texture2D" uid="uid://jofrcpaakt3a" path="res://board/sprites/board2.png" id="3_yl3td"]
[ext_resource type="Texture2D" uid="uid://cp21cc4l0bi3w" path="res://board/sprites/board3.png" id="4_bjfdw"]
[ext_resource type="Texture2D" uid="uid://n72b5agv2obj" path="res://board/sprites/board4.png" id="5_huudj"]
[ext_resource type="Texture2D" uid="uid://bgv60j8nk6pd0" path="res://board/sprites/board5.png" id="6_3ew12"]
[ext_resource type="Texture2D" uid="uid://ontqs8ca2pbd" path="res://board/sprites/board6.png" id="7_akjoq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r6g0v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_k8kll")
}, {
"duration": 1.0,
"texture": ExtResource("3_yl3td")
}, {
"duration": 1.0,
"texture": ExtResource("4_bjfdw")
}, {
"duration": 1.0,
"texture": ExtResource("5_huudj")
}, {
"duration": 1.0,
"texture": ExtResource("6_3ew12")
}, {
"duration": 1.0,
"texture": ExtResource("7_akjoq")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Curve" id="Curve_7axe5"]
max_value = 20.0
_data = [Vector2(0.0123457, 20), 0.0, 0.0, 0, 0, Vector2(0.901235, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_0iio0"]
offsets = PackedFloat32Array(0.183962, 0.825472)
colors = PackedColorArray(0.654902, 0.243137, 0.172549, 1, 0.870588, 0.666667, 0.192157, 0.254902)

[node name="youtube" type="Node2D"]
script = ExtResource("1_2juek")

[node name="background" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r6g0v")

[node name="background_particles" type="CPUParticles2D" parent="."]
amount = 156
emission_shape = 3
emission_rect_extents = Vector2(140, 80)
gravity = Vector2(0, 0)
scale_amount_min = 85.0
scale_amount_max = 85.0
color = Color(0.933333, 0.729412, 0.45098, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -537.0
offset_top = -192.0
offset_right = 484.0
offset_bottom = 222.0
color = Color(0, 1, 0, 1)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -190.0
offset_top = -31.0
offset_right = 173.0
offset_bottom = 13.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("1_8dylx")
text = "I MADE A MULTIPLAYER GAME
THAT PRETTY MUCH WORKS
IN JUST 3 DAYS
GIVE ME SOME LIKES"
horizontal_alignment = 1

[node name="firework_1" type="CPUParticles2D" parent="."]
position = Vector2(-67, -71)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 85
one_shot = true
explosiveness = 0.78
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_curve = SubResource("Curve_7axe5")
color_ramp = SubResource("Gradient_0iio0")

[node name="firework_2" type="CPUParticles2D" parent="."]
position = Vector2(148, 41)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 85
one_shot = true
explosiveness = 0.78
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_curve = SubResource("Curve_7axe5")
color_ramp = SubResource("Gradient_0iio0")

[node name="firework_3" type="CPUParticles2D" parent="."]
position = Vector2(-132, 87)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 85
one_shot = true
explosiveness = 0.78
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_curve = SubResource("Curve_7axe5")
color_ramp = SubResource("Gradient_0iio0")

[node name="firework_4" type="CPUParticles2D" parent="."]
position = Vector2(120, -90)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 85
one_shot = true
explosiveness = 0.78
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_curve = SubResource("Curve_7axe5")
color_ramp = SubResource("Gradient_0iio0")

[node name="Camera2D" type="Camera2D" parent="."]
